# honeybot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  mk  run
src/: main.cpp
